MESSAGE(STATUS "Adding integration tests for QMCPACK")
IF ( NOT QMC_VERBOSE_CONFIGURATION )
  MESSAGE("Set QMC_VERBOSE_CONFIGURATION=1 for details of which tests will be enabled.")
ENDIF()

add_subdirectory(converter)
add_subdirectory(estimator)
add_subdirectory(models)
add_subdirectory(io)
add_subdirectory(performance)

IF(QE_FOUND)
  add_subdirectory(pw2qmcpack)
ENDIF()

message("Adding system tests for QMCPACK")

IF (NOT TEST_MAX_PROCS )
SET ( TEST_MAX_PROCS 16 )
message ("TEST_MAX_PROCS was unset. Set to 16")
ENDIF ()

set(QMCAPP_ERR "")
if((NOT ${TEST_MAX_PROCS}) OR (${TEST_MAX_PROCS} STREQUAL ""))
    set(QMCAPP_ERR "${QMCAPP_ERR}  TEST_MAX_PROCS not set: '${TEST_MAX_PROCS}'\n")
endif()

IF(MIXED_PRECISION)
  SET(SUCCESS_STATUS_MP FALSE)
ELSE()
  SET(SUCCESS_STATUS_MP TRUE)
ENDIF()

IF(ENABLE_OFFLOAD)
  SET(SUCCESS_STATUS_OFFLOAD FALSE)
ELSE()
  SET(SUCCESS_STATUS_OFFLOAD TRUE)
ENDIF()

IF(BUILD_AFQMC)
  INCLUDE("${qmcpack_SOURCE_DIR}/CMake/python.cmake")
  SET(afqmctools_python_reqs numpy;h5py;mpi4py;scipy;pyscf)
  CHECK_PYTHON_REQS(afqmctools_python_reqs afqmc_workflow add_tests)
  IF(add_tests)
    message("Adding tests for AFQMC workflow.")
    add_subdirectory("afqmc/workflow")
  ENDIF()
ENDIF()

IF(HAVE_PYSCF)
  IF(NOT QMC_COMPLEX)
    INCLUDE("${qmcpack_SOURCE_DIR}/CMake/python.cmake")
    SET(pyscf_python_reqs numpy;h5py;pyscf;PyscfToQmcpack;PyscfToQmcpack_Spline)
    CHECK_PYTHON_REQS(pyscf_python_reqs pyscf_workflow add_tests)
  
    IF(add_tests)
      message("Python dependencies met. Adding PySCF workflow tests")
      add_subdirectory("pyscf")
    ENDIF()
  ENDIF()
ENDIF()
#
#
if(NOT ${QMCAPP_ERR} STREQUAL "")
    message("${QMCAPP_ERR}  skipping tests")
else()
    add_subdirectory("heg/heg_14_gamma")
    add_subdirectory("heg/heg_54_J2rpa")
    add_subdirectory("molecules")
    add_subdirectory("solids")
endif()
